--- a/assets/colorful.css
+++ b/assets/colorful.css
@@ -1,5 +1,5 @@
 
-.highlight { background-color: ##f2f5f7 ; padding: 1%;}
+.highlight { background-color: #f2f5f7 ; padding: 1%;}
 .highlight .hll { background-color: #ffffcc }
 .highlight .c { color: #808080 } /* Comment */
 .highlight .err { color: #F00000; background-color: #F0A0A0 } /* Error */
