adding google-search

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,6 +24,7 @@ layout: default
   </header>
 
   <div class="container">
+    {% include google-search.html %}
     <div class="row">
       <div class="col-lg-10 col-md-10 mx-auto">
 
