--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,7 +24,9 @@ layout: default
   </header>
 
   <div class="container">
+    <div class="row">
     {% include google-search.html %}
+    </div>
     <div class="row">
       <div class="col-lg-10 col-md-10 mx-auto">
 
