adding google search

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,6 +20,9 @@ layout: default
           </div>
         </div>
       </div>
+      <div class="row">
+   {% include google-search.html %}
+      </div>
     </div>
   </header>
 
