--- a/_includes/google-search.html
+++ b/_includes/google-search.html
@@ -1,4 +1,6 @@
 <form method="get" action="http://www.google.com/search" target="_blank">
-<input type="hidden" name="sitesearch" value="sagiv-barhoom.me" />
-<input type="text" class="form-control form-control-lg" name="q" maxlength="255" placeholder="Search with Google" />
+<div class="form-group">
+  <input type="hidden" name="sitesearch" value="sagiv-barhoom.me" />
+  <input type="text" class="form-control form-control-lg" name="q" maxlength="255" placeholder="Search with Google" />
+</div>
 </form>
