--- a/_includes/google-search.html
+++ b/_includes/google-search.html
@@ -1,6 +1,8 @@
+<div class="text-center">
 <form method="get" action="http://www.google.com/search" target="_blank">
-<div class="form-group col-xs-6">
+<div class="form-group col-md-6 ">
   <input type="hidden" name="sitesearch" value="sagiv-barhoom.me" />
   <input type="text" class="form-control form-control-lg" name="q" maxlength="255" placeholder="Search with Google" />
 </div>
 </form>
+</div>
