--- a/_includes/google-search.html
+++ b/_includes/google-search.html
@@ -1,5 +1,5 @@
 
-<form method="get" action="http://www.google.com/search" target="_blank">
+<form method="get" action="https://www.google.com/search" target="_blank">
 <div class="form-group col-md-8" style="margin: auto;">
   <input type="hidden" name="sitesearch" value="sagiv-barhoom.me" />
   <input type="text" class="form-control form-control-lg" name="q" maxlength="255" placeholder="Search with Google" />
